apps/vikunja/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vikunja
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vikunja
  template:
    metadata:
      labels:
        app: vikunja
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: vikunja
          image: vikunja/vikunja:2.7.0
          ports:
            - containerPort: 3456
          volumeMounts:
            - name: data
              mountPath: /app/vikunja/files
              subPath: files
            - name: data
              mountPath: /db
              subPath: db
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: vikunja-data
